test: 부하 테스트 완료 1000명의 유저 대기열 진입 성공

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    implementation 'com.h2database:h2'
+    runtimeOnly 'com.mysql:mysql-connector-j'
+    // implementation 'com.h2database:h2' // temporarily enabled for data export
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
