--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -4,10 +4,17 @@ spring:
     include: secret
 
   datasource:
-    url: jdbc:h2:file:./app;AUTO_SERVER=TRUE;MODE=MySQL
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
+    url: jdbc:mysql://127.0.0.1:3306/ticketon?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+    username: root
+    password: password
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    hikari:
+      maximum-pool-size: 50
+      minimum-idle: 10
+      connection-timeout: 30000
+      idle-timeout: 600000
+      max-lifetime: 1800000
+      leak-detection-threshold: 60000
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
@@ -16,11 +23,38 @@ spring:
       hibernate:
         jdbc:
           batch_size: 100
-  h2:
-    console:
-      enabled: true
+  # H2 Database Configuration (commented out)
+  # h2:
+  #   console:
+  #     enabled: true
+  # Previous H2 configuration:
+  # datasource:
+  #   url: jdbc:h2:file:./app;AUTO_SERVER=TRUE;MODE=MySQL
+  #   username: sa
+  #   password:
+  #   driver-class-name: org.h2.Driver
   config:
     import: "user.yml"
 
 server:
   port: 9000
+  tomcat:
+    threads:
+      max: 500
+      min-spare: 50
+    connection-timeout: 20000
+    max-connections: 2000
+    accept-count: 500
+
+logging:
+  level:
+    org.codenbug: DEBUG
+    org.springframework.web: DEBUG
+  file:
+    name: logs/app.log
+  pattern:
+    file: "%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n"
+  logback:
+    rollingpolicy:
+      max-file-size: 10MB
+      max-history: 10
