--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -17,17 +17,31 @@ spring:
     include: secret
 
   datasource:
-    url: jdbc:h2:file:./auth;AUTO_SERVER=TRUE;MODE=MySQL;DATABASE_TO_UPPER=false
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
+    url: jdbc:mysql://127.0.0.1:3306/ticketon?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+    username: root
+    password: password
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    hikari:
+      maximum-pool-size: 50
+      minimum-idle: 10
+      connection-timeout: 30000
+      idle-timeout: 600000
+      max-lifetime: 1800000
+      leak-detection-threshold: 60000
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
       ddl-auto: update
-  h2:
-    console:
-      enabled: true
+  # H2 Database Configuration (commented out)
+  # h2:
+  #   console:
+  #     enabled: true
+  # Previous H2 configuration:
+  # datasource:
+  #   url: jdbc:h2:file:./auth;AUTO_SERVER=TRUE;MODE=MySQL;DATABASE_TO_UPPER=false
+  #   username: sa
+  #   password:
+  #   driver-class-name: org.h2.Driver
   data:
     redis:
       port: 6379
@@ -36,4 +50,20 @@ spring:
 
 server:
   port: 9001
+  tomcat:
+    threads:
+      max: 500
+      min-spare: 50
+    connection-timeout: 20000
+    max-connections: 2000
+    accept-count: 500
+
+
+logging:
+  level:
+    org.codenbug: DEBUG
+    org.springframework.security: DEBUG
+    org.springframework.web: DEBUG
+    org.apache.catalina.core.ContainerBase: INFO
+    org.springframework.boot.web.embedded.tomcat: debug
 
