--- a/broker/src/main/resources/application.yml
+++ b/broker/src/main/resources/application.yml
@@ -8,10 +8,10 @@ spring:
   application:
     name: broker-service # Eureka에 등록될 서비스의 고유 이름
   datasource:
-    url: jdbc:h2:file:./app;AUTO_SERVER=TRUE;MODE=MySQL
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
+    url: jdbc:mysql://127.0.0.1:3306/ticketon?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+    username: root
+    password: password
+    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
@@ -20,9 +20,16 @@ spring:
       hibernate:
         jdbc:
           batch_size: 100
-  h2:
-    console:
-      enabled: true
+  # H2 Database Configuration (commented out)
+  # h2:
+  #   console:
+  #     enabled: true
+  # Previous H2 configuration:
+  # datasource:
+  #   url: jdbc:h2:file:./app;AUTO_SERVER=TRUE;MODE=MySQL
+  #   username: sa
+  #   password:
+  #   driver-class-name: org.h2.Driver
 
 eureka:
   client:
@@ -37,3 +44,11 @@ custom:
 
 server:
   port: 0
+  tomcat:
+    threads:
+      max: 2000
+      min-spare: 100
+    max-connections: 10000
+    accept-count: 1000
+    connection-timeout: 60000
+    max-http-header-size: 8192
