fix: 빌드 실패 해결

--- a/redislock/build.gradle
+++ b/redislock/build.gradle
@@ -17,3 +17,9 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+tasks.named('bootJar'){
+    enabled=false
+}
+tasks.named('jar') {
+    enabled = true
+}
