--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -86,6 +86,9 @@ logging:
 custom:
   cookie:
     domain: localhost
+sns:
+  google:
+      url: https://accounts.google.com/o/oauth2/v2/auth
 management:
   endpoints:
     web:
