--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,111 +1,57 @@
 services:
-  kafka:
-    image: 'bitnami/kafka:latest'
+  kafka-1:
+    image: apache/kafka:latest
+    container_name: kafka-1
     ports:
       - "29092:9092"
     environment:
-      - KAFKA_CFG_NODE_ID=0
-      - KAFKA_CFG_PROCESS_ROLES=controller,broker
-      - KAFKA_CFG_LISTENERS=EXTERNAL://:9092,CONTROLLER://:9093,PLAINTEXT://:19092
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:19092, EXTERNAL://localhost:29092
-      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,EXTERNAL:PLAINTEXT
-      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka:9093
-      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
-#  controller-1:
-#    image: apache/kafka:latest
-#    container_name: controller-1
-#    environment:
-#      KAFKA_NODE_ID: 1
-#      KAFKA_PROCESS_ROLES: controller
-#      KAFKA_LISTENERS: CONTROLLER://:9093
-#      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-#      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
-#      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@controller-1:9093,2@controller-2:9093,3@controller-3:9093
-#      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
-#
-#  controller-2:
-#    image: apache/kafka:latest
-#    container_name: controller-2
-#    environment:
-#      KAFKA_NODE_ID: 2
-#      KAFKA_PROCESS_ROLES: controller
-#      KAFKA_LISTENERS: CONTROLLER://:9093
-#      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-#      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
-#      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@controller-1:9093,2@controller-2:9093,3@controller-3:9093
-#      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
-#
-#  controller-3:
-#    image: apache/kafka:latest
-#    container_name: controller-3
-#    environment:
-#      KAFKA_NODE_ID: 3
-#      KAFKA_PROCESS_ROLES: controller
-#      KAFKA_LISTENERS: CONTROLLER://:9093
-#      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-#      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
-#      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@controller-1:9093,2@controller-2:9093,3@controller-3:9093
-#      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
-#
-#  broker-1:
-#    image: apache/kafka:latest
-#    container_name: broker-1
-#    ports:
-#      - 29092:9092
-#    environment:
-#      KAFKA_NODE_ID: 4
-#      KAFKA_PROCESS_ROLES: broker
-#      KAFKA_LISTENERS: 'PLAINTEXT://:19092,PLAINTEXT_HOST://:9092'
-#      KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://broker-1:19092,PLAINTEXT_HOST://localhost:29092'
-#      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-#      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
-#      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-#      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@controller-1:9093,2@controller-2:9093,3@controller-3:9093
-#      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
-#    depends_on:
-#      - controller-1
-#      - controller-2
-#      - controller-3
-#
-#  broker-2:
-#    image: apache/kafka:latest
-#    container_name: broker-2
-#    ports:
-#      - 39092:9092
-#    environment:
-#      KAFKA_NODE_ID: 5
-#      KAFKA_PROCESS_ROLES: broker
-#      KAFKA_LISTENERS: 'PLAINTEXT://:19092,PLAINTEXT_HOST://:9092'
-#      KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://broker-2:19092,PLAINTEXT_HOST://localhost:39092'
-#      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-#      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
-#      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-#      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@controller-1:9093,2@controller-2:9093,3@controller-3:9093
-#      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
-#    depends_on:
-#      - controller-1
-#      - controller-2
-#      - controller-3
-#
-#  broker-3:
-#    image: apache/kafka:latest
-#    container_name: broker-3
-#    ports:
-#      - 49092:9092
-#    environment:
-#      KAFKA_NODE_ID: 6
-#      KAFKA_PROCESS_ROLES: broker
-#      KAFKA_LISTENERS: 'PLAINTEXT://:19092,PLAINTEXT_HOST://:9092'
-#      KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://broker-3:19092,PLAINTEXT_HOST://localhost:49092'
-#      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-#      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
-#      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-#      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@controller-1:9093,2@controller-2:9093,3@controller-3:9093
-#      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
-#    depends_on:
-#      - controller-1
-#      - controller-2
-#      - controller-3
+      KAFKA_NODE_ID: 1
+      KAFKA_PROCESS_ROLES: broker,controller
+      KAFKA_LISTENERS: 'PLAINTEXT://:19092,PLAINTEXT_HOST://:9092,CONTROLLER://:9093'
+      KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://kafka-1:19092,PLAINTEXT_HOST://localhost:29092'
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@kafka-1:9093,2@kafka-2:9093,3@kafka-3:9093
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+    networks:
+      - common
+
+  kafka-2:
+    image: apache/kafka:latest
+    container_name: kafka-2
+    ports:
+      - "39092:9092"
+    environment:
+      KAFKA_NODE_ID: 2
+      KAFKA_PROCESS_ROLES: broker,controller
+      KAFKA_LISTENERS: 'PLAINTEXT://:19092,PLAINTEXT_HOST://:9092,CONTROLLER://:9093'
+      KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://kafka-2:19092,PLAINTEXT_HOST://localhost:39092'
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@kafka-1:9093,2@kafka-2:9093,3@kafka-3:9093
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+    networks:
+      - common
+
+  kafka-3:
+    image: apache/kafka:latest
+    container_name: kafka-3
+    ports:
+      - "49092:9092"
+    environment:
+      KAFKA_NODE_ID: 3
+      KAFKA_PROCESS_ROLES: broker,controller
+      KAFKA_LISTENERS: 'PLAINTEXT://:19092,PLAINTEXT_HOST://:9092,CONTROLLER://:9093'
+      KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://kafka-3:19092,PLAINTEXT_HOST://localhost:49092'
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@kafka-1:9093,2@kafka-2:9093,3@kafka-3:9093
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+    networks:
+      - common
 
   redis:
     image: redis:alpine
@@ -137,8 +83,7 @@ services:
       MYSQL_PASSWORD: ticketon
     volumes:
       - mysql_master_data:/var/lib/mysql
-      - ./mysql/master/my.cnf:/etc/my.cnf
-      - ./mysql/init-master.sql:/docker-entrypoint-initdb.d/init-master.sql
+      - ./mysql/my.cnf:/etc/my.cnf
     ports:
       - "3306:3306"
       - "33060:33060"
@@ -160,8 +105,7 @@ services:
       MYSQL_PASSWORD: ticketon
     volumes:
       - mysql_replica_data:/var/lib/mysql
-      - ./mysql/replica/my.cnf:/etc/my.cnf
-      - ./mysql/init-replica.sql:/docker-entrypoint-initdb.d/init-replica.sql
+      - ./mysql/my.cnf:/etc/my.cnf
     ports:
       - "3307:3306"
       - "33061:33060"
