--- a/purchase/src/main/resources/application.yml
+++ b/purchase/src/main/resources/application.yml
@@ -28,6 +28,9 @@ springdoc:
     path: /v3/api-docs
   swagger-ui:
     path: /swagger-ui.html
+payment:
+  toss:
+    api-url: https://api.tosspayments.com/v1/payments
 
 # Purchase 모듈 관련 설정
 # custom:
