--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -12,7 +12,11 @@ spring:
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
-
+  rabbitmq:
+    host: localhost # RabbitMQ host ip
+    port: 5672 # RabbitMQ port
+    username : root # RabbitMQ 웹 관리 콘솔 아이디
+    password: root # RabbitMQ 웹 관리 콘솔 비밀번호
   profiles:
     include: secret
     active: dev
