--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,9 @@ subprojects {
     repositories {
         mavenCentral()
     }
+    tasks.withType(JavaCompile) {
+        options.compilerArgs << "-parameters"
+    }
 
 }
 
@@ -51,4 +54,6 @@ tasks.named('bootJar') {
 tasks.named('jar') {
     enabled = true
 }
+
+
 
