--- a/user/src/main/resources/application.yml
+++ b/user/src/main/resources/application.yml
@@ -4,6 +4,11 @@ server:
 spring:
   # application:
     # name: user-service  # app 모듈에서 통합 관리
+  rabbitmq:
+    host: localhost # RabbitMQ host ip
+    port: 5672 # RabbitMQ port
+    username : root # RabbitMQ 웹 관리 콘솔 아이디
+    password: root # RabbitMQ 웹 관리 콘솔 비밀번호
   profiles:
     include: secret
   datasource:
@@ -23,8 +28,20 @@ spring:
       host: localhost
       port: 6379
 
+rabbitmq:
+  queue:
+    name: user-auth # 사용할 queue 이름
+  exchange:
+    name: user-auth # 사용할 exchange 이름
+  routing:
+    key : auth
+
+
 springdoc:
   api-docs:
     path: /v3/api-docs
   swagger-ui:
     path: /swagger-ui.html
+
+  
+
