feat : event 작성 controller validation 수정

--- a/event/build.gradle
+++ b/event/build.gradle
@@ -24,6 +24,9 @@ dependencies {
     implementation 'org.redisson:redisson-spring-boot-starter:3.24.3'
     implementation 'commons-codec:commons-codec:1.19.0'
 
+    // https://mvnrepository.com/artifact/com.googlecode.owasp-java-html-sanitizer/owasp-java-html-sanitizer
+    implementation("com.googlecode.owasp-java-html-sanitizer:owasp-java-html-sanitizer:20240325.1")
+
     implementation project(':seat')
     implementation project(':category-id')
     implementation project(':common')
