feat: caffeine 캐시 모듈 추가 및 핫 로드 캐시 조건 검증 함수 작성

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation project(':app:purchase')
     implementation project(':security-aop')
     implementation project(':app:notification')
+    implementation project(':cache')
 }
 
 tasks.named('test') {
