--- a/settings.gradle
+++ b/settings.gradle
@@ -2,18 +2,19 @@ rootProject.name = 'ticketon-DDD'
 
 include 'app:seat'
 include 'app:user'
-include 'common'
 include 'app:event'
-include 'auth'
+include 'app:purchase'
+include 'app:notification'
+include 'app:category-id'
 include 'app'
+include 'common'
+include 'auth'
 include 'gateway'
 include 'message'
 include 'security-aop'
-include 'app:category-id'
 include 'broker'
 include 'dispatcher'
 include 'eureka'
-include 'app:purchase'
-include 'app:notification'
 include 'batch'
 include 'redislock'
+include 'cache'
