--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   rabbitmq:
     image: rabbitmq:management-alpine
     container_name: rabbitmq
-    ports: 
+    ports:
       - 5672:5672
       - 15672:15672
     volumes:
@@ -99,7 +99,7 @@ services:
       MYSQL_PASSWORD: ticketon
     volumes:
       - mysql_master_data:/var/lib/mysql
-      - ./mysql/my.cnf:/etc/my.cnf
+      - ./mysql/master.cnf:/etc/my.cnf
     ports:
       - "3306:3306"
       - "33060:33060"
@@ -107,7 +107,7 @@ services:
     networks:
       - common
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-ppassword"]
+      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-ppassword" ]
       timeout: 5s
       retries: 10
 
@@ -121,7 +121,7 @@ services:
       MYSQL_PASSWORD: ticketon
     volumes:
       - mysql_replica_data:/var/lib/mysql
-      - ./mysql/my.cnf:/etc/my.cnf
+      - ./mysql/replica.cnf:/etc/my.cnf
     ports:
       - "3307:3306"
       - "33061:33060"
@@ -132,7 +132,7 @@ services:
     networks:
       - common
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-ppassword"]
+      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-ppassword" ]
       timeout: 5s
       retries: 10
 
