--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
-plugins{
+plugins {
     id 'application'
 }
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    
+
     // SpringDoc OpenAPI (Swagger)
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 
@@ -31,7 +31,6 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
 
-
     implementation project(':app:event')
     implementation project(':app:user')
     implementation project(':common')
@@ -40,6 +39,7 @@ dependencies {
     implementation project(':security-aop')
     implementation project(':app:notification')
     implementation project(':cache')
+    implementation project(':cache-core')
 }
 
 tasks.named('test') {
