--- a/app/event/build.gradle
+++ b/app/event/build.gradle
@@ -12,7 +12,7 @@ dependencies {
     testImplementation 'org.springframework.batch:spring-batch-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     testRuntimeOnly 'com.h2database:h2'
-    
+
     // SpringDoc OpenAPI (Swagger)
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 
@@ -33,6 +33,7 @@ dependencies {
     implementation project(':security-aop')
     implementation project(':message')
     implementation project(':app:notification')
+    implementation project(':cache-core')
 
 }
 
