feat: 캐시 키에 지역 단위 버전 관리 기능 추가
- `CacheKeyVersionManager`에 지역 단위 버전 개념 도입 및 구현
- `CacheClient`에 자동 로드 기능 추가와 읽기 동시성 처리 개선
- `EventListSearchCacheKey`를 `CacheKeyWithEpoch` 추상 클래스 기반으로 리팩터링
- Event 관련 서비스에서 지역별 캐싱 로직 반영 및 캐시 갱신 구현
- 캐시 초기화 및 통계 수집 로직 추가

BREAKING CHANGE: `CacheFactory`와 `CacheClient`의 기존 API가 변경되었습니다.

--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   rabbitmq:
     host: localhost # RabbitMQ host ip
     port: 5672 # RabbitMQ port
-    username : root # RabbitMQ 웹 관리 콘솔 아이디
+    username: root # RabbitMQ 웹 관리 콘솔 아이디
     password: root # RabbitMQ 웹 관리 콘솔 비밀번호
 
   datasource:
@@ -46,8 +46,8 @@ spring:
         jdbc:
           batch_size: 100
         format_sql: true
-        show_sql: true
-        use_sql_comments: true
+  #        show_sql: true
+  #        use_sql_comments: true
   # H2 Database Configuration (commented out)
   # h2:
   #   console:
@@ -91,14 +91,6 @@ server:
     max-connections: 2000
     accept-count: 500
 
-logging:
-  level:
-    org.codenbug: DEBUG
-    org.springframework.web: DEBUG
-    org.hibernate.SQL: DEBUG
-    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
-    org.springframework.orm.jpa: DEBUG
-    org.apache.kafka: off
 management:
   endpoints:
     web:
