--- a/app/src/main/resources/application-dev.yml
+++ b/app/src/main/resources/application-dev.yml
@@ -2,17 +2,17 @@ spring:
   jpa:
     properties:
       show-sql: true
-  web:
-    resources:
-      static-locations: file:/mnt/c/Users/jiwoo/workspace/ticketon-DDD/static/
-      cache:
-        period: 31536000  # 1년 캐시
-logging:
-  level:
-    org.hibernate.SQL: DEBUG
-    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
-    org.springframework.jdbc.core.JdbcTemplate: DEBUG
-    org.springframework.transaction: DEBUG
-    org.codeNbug.mainserver.domain.user.service: DEBUG
-    org.codenbug.user.domain.user.repository: DEBUG
-    org.hibernate.stat: DEBUG
+#  web:
+#    resources:
+#      static-locations: file:/mnt/c/Users/jiwoo/workspace/ticketon-DDD/static/
+#      cache:
+#        period: 31536000  # 1년 캐시
+#logging:
+#  level:
+#    org.hibernate.SQL: DEBUG
+#    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+#    org.springframework.jdbc.core.JdbcTemplate: DEBUG
+#    org.springframework.transaction: DEBUG
+#    org.codeNbug.mainserver.domain.user.service: DEBUG
+#    org.codenbug.user.domain.user.repository: DEBUG
+#    org.hibernate.stat: DEBUG
