refactor: 불필요한 파일 및 의존성 제거, 이벤트 서비스 설정 수정
- FileUploadController, ImageUploadController 클래스 삭제
- Kafka 관련 설정 및 의존성 제거
- DatabaseConfig에서 불필요한 도메인 패키지 경로 제거
- 공통 모듈 의존성 경로 업데이트 (`common` -> `platform:common`)
- 이벤트 및 좌석 서비스 URL을 위한 설정 추가 (application.yml, application-prod.yml 수정)

--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -67,19 +67,11 @@ spring:
       - "optional:../purchase/src/main/resources/application.yml"
       - "optional:../notification/src/main/resources/application.yml"
 
-  # Kafka Configuration for notification events
-  kafka:
-    bootstrap-servers: localhost:29092
-    consumer:
-      group-id: app-notification-service
-      auto-offset-reset: earliest
-      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
-      properties:
-        spring.json.trusted.packages: "org.codenbug.message"
-    producer:
-      key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+services:
+  event:
+    base-url: http://localhost:9002
+  seat:
+    base-url: http://localhost:9005
 
 server:
   port: 9000
@@ -98,7 +90,6 @@ logging:
     org.hibernate.SQL: DEBUG
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
     org.springframework.orm.jpa: DEBUG
-    org.apache.kafka: off
 management:
   endpoints:
     web:
