--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,8 +24,6 @@ dependencies {
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-jta-atomikos
     implementation("org.springframework.boot:spring-boot-starter-jta-atomikos:2.7.18")
 
-    implementation 'org.springframework.kafka:spring-kafka'
-    testImplementation 'org.springframework.kafka:spring-kafka-test'
 
     implementation 'io.micrometer:micrometer-registry-prometheus'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
@@ -34,7 +32,7 @@ dependencies {
 
     implementation project(':event')
     implementation project(':user')
-    implementation project(':common')
+    implementation project(':platform:common')
     implementation project(':seat')
     implementation project(':purchase')
     implementation project(':security-aop')
