--- a/app/src/main/resources/application-prod.yml
+++ b/app/src/main/resources/application-prod.yml
@@ -17,25 +17,15 @@ spring:
   h2:
     console:
       enabled: true
-  kafka:
-    bootstrap-servers: 10.0.1.47:9092
-    consumer:
-      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
-      properties:
-        spring:
-          json:
-            trusted:
-              packages: org.codenbug.message
-    producer:
-      key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
-      acks: all
-      properties:
-        # 멱등성(Idempotence) 활성화 (트랜잭션의 필수 조건)
-        enable.idempotence: true
 server:
   port: 9000
   tomcat:
     threads:
       max: 1100
+
+services:
+  event:
+    base-url: http://localhost:9002
+  seat:
+    base-url: http://localhost:9005
 
