feat: Redis 토큰 저장 및 삭제 로직 변경, MySQL 설정 파일 경로 수정
- Redis ENTRY_TOKEN 저장 방식을 변경 (`Hash`에서 `String` 키-값 저장으로 변경)
  - TTL 미적용 문제 해결 (키 단위 만료 설정)
  - 관련 삭제 및 검증 로직 수정 (`delete`, `opsForValue` 사용)
- RedisLock 및 SseEmitterService 내부 Redis 연산 로직 리팩터링
  - 유저별 토큰 정리 및 관련 메서드 추가 (`buildEntryTokenKey`)
- MySQL 마스터 및 리플리카 설정 파일 경로 변경
  - 기존 `docker/mysql/my.cnf` 삭제
  - 새로운 경로: `docker/mysql/master/master.cnf` 및 `docker/mysql/replica/replica.cnf`
- Redis 작업을 위한 `StringRedisTemplate` 추가 도입
  - 기존 `RedisTemplate`을 `StringRedisTemplate`으로 보완하여 작업 처리
- EntryTokenValidator 및 관련 클래스 토큰 검증 로직 업데이트
  - 유저별 키 기준 검증 로직 적용
- 새로운 트러블슈팅 문서 추가
  - `docs/troubleshooting/entry-token-ttl.md`: Redis Hash TTL 미지원 문제 해결 방안 문서화

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -99,7 +99,7 @@ services:
       MYSQL_PASSWORD: ticketon
     volumes:
       - mysql_master_data:/var/lib/mysql
-      - ./mysql/my.cnf:/etc/my.cnf
+      - ./mysql/master/master.cnf:/etc/my.cnf
     ports:
       - "3306:3306"
       - "33060:33060"
@@ -120,8 +120,8 @@ services:
       MYSQL_USER: ticketon
       MYSQL_PASSWORD: ticketon
     volumes:
+      - ./mysql/replica/replica.cnf:/etc/my.cnf
       - mysql_replica_data:/var/lib/mysql
-      - ./mysql/my.cnf:/etc/my.cnf
     ports:
       - "3307:3306"
       - "33061:33060"
