feat: 사용자 등록 검증 로직 추가 및 예외 처리 개선
- 회원가입 요청 시 사용자 등록 정보 검증 로직 추가 (`UserValidationClient` 사용)
  - `RegisterRequest`에 필드 유효성 검증 어노테이션 추가 (@NotBlank, @Email, @Min 등)
  - 사용자 등록 검증 요청 API 추가 (`UserValidationController`)
- `GlobalExceptionHandler` 개선
  - 파라미터 유효성 예외 처리 추가 (`MethodArgumentNotValidException`, `BindException`)
  - `HttpMessageNotReadableException`, `DataIntegrityViolationException`, `EntityNotFoundException`, `AccessDeniedException`에 대한 예외 핸들링 추가
- 인증/인가 관련 AOP 로직 헤더 검증 방식 개선 및 공통 메서드 분리
  - `getRequiredHeader` 메서드 추가로 헤더 유효성 확인 로직 통합
- 인증 토큰 관련 글로벌 예외 핸들링 추가 (`SecurityAopExceptionHandler`)
  - 잘못된 토큰 및 권한 오류에 대한 처리 로직 구현
- RestTemplate 관련 설정 추가
  - `AuthConfig`에서 RestTemplate Bean 등록
  - `application.yml`에 사용자 서비스 URL 추가
- 기타
  - JWT 토큰 유효성 예외 처리 로직 강화 (`AuthorizationFilter`)
  - 불필요한 중복 코드 제거 및 유효성 로직 리팩터링 (`UserCommandService`)

--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -77,6 +77,9 @@ logging:
 custom:
   cookie:
     domain: localhost
+service:
+  user:
+    base-url: http://localhost:9000
 sns:
   google:
       url: https://accounts.google.com/o/oauth2/v2/auth
