feat: 이벤트 수정 로직 및 데이터 처리 방식 개선
- `UpdateEventRequest`에 새로운 필드 추가
  - 이벤트 카테고리 ID(`categoryId`) 필드 추가
  - Jackson 어노테이션 추가로 불필요한 데이터 무시 처리(@JsonIgnoreProperties)
- `EventInformation`에 카테고리 ID 업데이트 로직 반영
- `SeatLayoutStats`에 최소/최대 가격 필드 추가 및 관련 초기화 로직 수정
- 좌석 통계(`SeatLayoutStats`) 데이터 활용을 위한 쿼리 개선
  - 최소/최대 가격 조회 시 `coalesce` 활용하여 통계 데이터 우선 사용
  - 쿼리에 `leftJoin(seatStats)` 문구 추가
- `EventCommandController`에서 이벤트 수정 후 반환 데이터 변경
  - 수정된 이벤트 데이터를 반환하도록 수정
- 글로벌 예외 처리 로직 추가
  - `IllegalStateException` 핸들링 로직 추가
- Redis 캐시 제거 로직 추가 및 다중 캐싱 적용
  - 이벤트 관련 검색 데이터 캐시 제거 처리(`@Caching`, `@CacheEvict` 사용)
- 생산 환경 설정 파일 수정 (`application-prod.yml`)
  - 스택 트레이스 출력 설정 비활성화(`server.error.include-stacktrace`)
- `SeatLayout` 도메인에서 좌석 업데이트 로직 변경
  - 좌석 목록 수정 시 기존 데이터 정리 후 새로운 데이터 추가
- 테스트 코드 수정
  - 응답 데이터에서 불필요한 토큰 타입 제거
  - 헤더 및 쿠키 처리 로직 테스트 케이스 업데이트

--- a/auth/src/main/resources/application-prod.yml
+++ b/auth/src/main/resources/application-prod.yml
@@ -2,6 +2,10 @@ custom:
   cookie:
     domain: .ticketon.site
 
+server:
+  error:
+    include-stacktrace: never
+
 spring:
   datasource:
     url: jdbc:mysql://mysql.auth.ticketone.site:3306/auth?serverTimezone=Asia/Seoul
