--- a/broker/src/main/resources/application-prod.yml
+++ b/broker/src/main/resources/application-prod.yml
@@ -26,6 +26,8 @@ server:
       max: 500
     # 연결 요청을 대기열에 쌓아둘 수 있는 최대 수
     accept-count: 100
+  error:
+    include-stacktrace: never
 
 management:
   endpoints:
