feat: Polling 대기열 시스템 구현 및 Redis 큐 구조 최적화
- Polling 방식 대기열 로직 추가
  - `PollingWaitingQueueService` 및 컨트롤러 구현: 대기열 진입, 순번 조회(Heartbeat), 이탈 처리
  - `EntryDispatcherService` 추상화: SSE(`SSEEntryDispatchService`)와 Polling(`PollingEntryDispatchService`) 모드 분리
  - `EntryDispatchServiceFacade`: 프로파일에 따른 디스패처 위임 처리
- Redis 큐 데이터 구조 및 관리 개선
  - 대기열 ZSet 저장 방식 변경: 전체 JSON 객체 대신 `userId`만 저장하여 메모리 효율성 증대
  - `QueueReaper` 도입: `LastSeen` 타임스탬프 기반의 유령 유저(Waiting/Entry) 자동 정리 스케줄러
  - Lua 스크립트(`promote_all_waiting_for_event.lua`) 수정: 변경된 데이터 구조 반영
- 입장 토큰 검증 강화 (Cross-Event 방지)
  - `EntryTokenValidator`: 토큰 유효성 검사 시 이벤트 ID 일치 여부 확인 로직 추가
  - `PurchaseService`, `SeatController`: API 호출 시 토큰과 요청 이벤트의 매핑 검증 적용
- 설정 및 기타 리팩터링
  - `JpaConfig` 삭제 및 Redis 연결 설정(`REDIS_HOST`, `REDIS_PORT`) 표준화
  - `EntryStreamMessageListener`: 애플리케이션 종료 시 인스턴스 전용 스트림 정리 로직 추가
  - `EventViewRepositoryImpl`: 좌석 수 조회 로직 효율화 (`seatStats.seatCount` 사용)
  - 개발 도구 설정(`.serena`) 및 문서(`docs/`) 추가

--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -9,7 +9,10 @@ spring:
     port: 5672 # RabbitMQ port
     username : root # RabbitMQ 웹 관리 콘솔 아이디
     password: root # RabbitMQ 웹 관리 콘솔 비밀번호
-
+  data:
+    redis:
+      host: ${REDIS_HOST:localhost}
+      port: ${REDIS_PORT:6379}
   datasource:
     primary:
       url: jdbc:mysql://127.0.0.1:3306/ticketon?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
