--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -51,8 +51,8 @@ spring:
   #   driver-class-name: org.h2.Driver
   data:
     redis:
-      port: 6379
-      host: localhost
+      port: ${REDIS_PORT:6379}
+      host: ${REDIS_HOST:localhost}
 
 springdoc:
   override-with-generic-response: false
