--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -79,6 +79,16 @@ services:
     command: redis-server --save 60 1 --loglevel warning
     networks:
       - common
+  polling:
+    image: redis:alpine
+    ports:
+      - "6381:6379"
+    volumes:
+      - ./polling/data:/data
+    restart: always
+    command: redis-server --save 60 1 --loglevel warning
+    networks:
+      - common
   cache:
     image: redis:alpine
     ports:
