--- a/event/src/main/resources/application.yml
+++ b/event/src/main/resources/application.yml
@@ -4,3 +4,8 @@ spring:
   profiles:
     active: dev
     include: secret
+
+  data:
+    redis:
+      host: ${REDIS_HOST:localhost}
+      port: ${REDIS_PORT:6379}
