--- a/seat/src/main/resources/application.yml
+++ b/seat/src/main/resources/application.yml
@@ -6,22 +6,10 @@ spring:
     name: seat  # app 모듈에서 통합 관리
   profiles:
     include: secret
-  datasource:
-    url: jdbc:mysql://localhost:3306/ticketon
-    username: ticketon
-    password: ticketon
-    driver-class-name: com.mysql.cj.jdbc.Driver
-  jpa:
-    hibernate:
-      ddl-auto: none
-    show-sql: true
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
   data:
     redis:
-      host: localhost
-      port: 6379
+      host: ${REDIS_HOST:localhost}
+      port: ${REDIS_PORT:6379}
   rabbitmq:
     host: localhost
     port: 5672
