feat: 결제 모듈 이벤트 소싱 전환 및 이벤트 점유(Hold) 로직 구현
- 결제 프로세스 이벤트 소싱(Event Sourcing) 아키텍처 도입
  - `PurchaseConfirmCommandService`: 결제 승인 요청을 비동기로 접수(202), `CONFIRM_REQUESTED` 이벤트 및 Outbox 저장
  - `PurchaseConfirmWorker`: 메시지 소비, 멱등성 처리(Inbox), PG 호출, 결과 이벤트 적재 및 Projection 갱신
  - `PurchaseOutboxPublisher`: 스케줄러를 통해 Outbox 메시지를 RabbitMQ로 발행
  - `PurchaseConfirmQueryService`: Projection(`PurchaseConfirmStatusProjection`) 기반 결제 상태 조회 로직 구현
  - ES 인프라(EventStore, Stream, Outbox, ProcessedMessage) 엔티티 및 리포지토리 추가
- 이벤트 데이터 무결성을 위한 Hold 메커니즘 추가
  - `EventPaymentHold` 엔티티 및 서비스 구현: `salesVersion` 기반 낙관적 락과 TTL을 활용한 점유 관리
  - 내부 API(`create`, `consume`, `release`) 및 `EventPaymentHoldClient` 연동 구현
  - 중요 필드 변경 시 버전 불일치로 결제를 거절하거나 Hold 상태를 관리하는 로직 적용
- 결제 이벤트 소싱 설계 및 구현 계획 문서 추가 (`docs/purchase/payment-event-sourcing-plan.md`)

--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -89,6 +89,9 @@ eureka:
       defaultZone: http://127.0.0.1:8761/eureka/
     register-with-eureka: true
     fetch-registry: true
+  instance:
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+    hostname: ${EUREKA_HOST_NAME:localhost}
   user:
     base-url: http://localhost:9000
 sns:
