feat: 대기열 폴링 주기 최적화 및 중복 진입 방지 로직 추가
- `PollingWaitingQueueService` 폴링 주기 최적화
  - 대기열 순번, 대기열 크기, 이벤트 상태에 따른 동적 폴링 간격 계산 로직 구현
  - 대기열이 혼잡하거나 이벤트가 종료된 경우 폴링 주기를 늘려 서버 부하 감소
  - `WaitingQueueRedisRepository`에 상태 조회 및 큐 크기 확인 메서드 추가
- 대기열 진입 및 연결 안정성 강화
  - `PollingWaitingQueueService` 및 `WaitingQueueEntryService`에 중복 토큰 발급 방지 검증 추가
  - `SseEmitterService` 중복 연결 시도 시 예외 처리 추가
  - `GlobalExceptionHandler` 응답 포맷을 `RsData`로 통일 및 예외 로깅 개선
- 시스템 로그 레벨 조정 및 설정 개선
  - Auth, Gateway, Dispatcher 등 주요 서비스의 운영 로그 레벨 하향(INFO -> DEBUG)
  - Eureka 클라이언트 및 인스턴스 호스트 설정 유연화
- k6 성능 테스트 스크립트 변경 (`sse-throughput-test.js`)
  - SSE 기반 테스트를 폴링(Polling) 기반 시나리오로 전면 수정
  - 폴링 진입, 상태 조회, 승격 시간 측정 등 관련 메트릭 정의 추가

--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -67,14 +67,6 @@ server:
     accept-count: 500
 
 
-logging:
-  level:
-    org.codenbug: DEBUG
-    org.springframework.security: DEBUG
-    org.springframework.web: DEBUG
-    org.apache.catalina.core.ContainerBase: INFO
-    org.springframework.boot.web.embedded.tomcat: debug
-
 
 custom:
   cookie:
@@ -87,8 +79,12 @@ eureka:
   client:
     service-url:
       defaultZone: http://127.0.0.1:8761/eureka/
+      hostname: ${EUREKA_CLIENT_HOST_NAME:localhost}
     register-with-eureka: true
     fetch-registry: true
+  instance:
+    hostname: ${EUREKA_INSTANCE_HOST_NAME:localhost}
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
   user:
     base-url: http://localhost:9000
 sns:
