--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -48,9 +48,9 @@ spring:
       hibernate:
         jdbc:
           batch_size: 100
-        format_sql: true
-        show_sql: true
-        use_sql_comments: true
+#        format_sql: true
+#        show_sql: true
+#        use_sql_comments: true
   # H2 Database Configuration (commented out)
   # h2:
   #   console:
@@ -86,13 +86,7 @@ server:
     max-connections: 2000
     accept-count: 500
 
-logging:
-  level:
-    org.codenbug: DEBUG
-    org.springframework.web: DEBUG
-    org.hibernate.SQL: DEBUG
-    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
-    org.springframework.orm.jpa: DEBUG
+
 management:
   endpoints:
     web:
@@ -107,6 +101,8 @@ eureka:
   client:
     service-url:
       defaultZone: http://127.0.0.1:8761/eureka/
+      hostname: ${EUREKA_CLIENT_HOST_NAME:localhost}
     register-with-eureka: true
     fetch-registry: true
-
+  instance:
+    hostname: ${EUREKA_INSTANCE_HOST_NAME:localhost}
