--- a/broker/src/main/resources/application.yml
+++ b/broker/src/main/resources/application.yml
@@ -26,9 +26,10 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/ # Eureka 서버 주소
-      hostname: ${EUREKA_CLIENT_HOST_NAME}
+      hostname: ${EUREKA_CLIENT_HOST_NAME:localhost}
   instance:
     instance-id: ${spring.application.name}:${server.port}:${random.value}
+    hostname: ${EUREKA_CLIENT_HOST_NAME:localhost}
 custom:
   events:
     url: http://app
