> Gemini 2.5 generated this response due to high traffic on Gemini 3
feat: Docker 빌드 최적화 및 CI/CD 파이프라인 개선

- `dispatcher` 모듈에 런타임 전용 Docker 이미지 빌드 방식 도입
  - CI에서 JAR를 사전 빌드하고, 최소한의 컨텍스트로 이미지를 생성하도록 `Dockerfile.runtime` 및 `dispatcher/.dockerignore` 추가
  - 관련 GitHub Actions 워크플로우(`disptach-ci.yml`)를 수정하여 사전 빌드 단계 추가 및 빌드 컨텍스트 경로 변경
- 전역 `.dockerignore` 파일을 추가하여 불필요한 파일(빌드 캐시, IDE 설정 등)을 제외하고 Docker 빌드 효율성 향상
- 프로젝트 구조 변경에 따라 `dispatcher`, `eureka`, `gateway` 모듈의 Dockerfile 내 Gradle 빌드 경로 수정
- 성능 테스트 결과(`summary.json`) 업데이트

--- a/.github/workflows/disptach-ci.yml
+++ b/.github/workflows/disptach-ci.yml
@@ -98,6 +98,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Set up JDK
+        uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+
+      - name: dispatcher JAR 빌드
+        run: ./gradlew :dispatcher:bootJar -x test --no-daemon
+
       - name: Docker Buildx 설치
         uses: docker/setup-buildx-action@v3
 
@@ -119,8 +128,8 @@ jobs:
       - name: 디스패치 서버 모듈 빌드 앤 푸시
         uses: docker/build-push-action@v6
         with:
-          context: .
-          file: dispatcher/Dockerfile
+          context: dispatcher
+          file: dispatcher/Dockerfile.runtime
           push: true
           tags: |
             ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-dispatcher-deploy:${{ needs.makeTagAndReleaseServer.outputs.tag_name }}
