build: CI/CD 빌드 전략 변경 및 Docker 런타임 이미지 도입
- Docker 빌드 방식을 'JAR 사전 빌드 후 런타임 이미지 생성'으로 변경
  - 각 모듈(app, auth, broker, dispatcher, eureka, gateway)에 `Dockerfile.runtime` 및 `.dockerignore` 추가
  - CI 환경에서 JDK 21 설정 및 `bootJar` 실행 단계 추가하여 빌드 속도 및 이미지 경량화 도모
- GitHub Actions 워크플로우 최적화
  - `docker/build-push-action`의 context 및 file 경로를 런타임 이미지 기준으로 수정
  - `common-ci.yml` 등에서 불필요한 `application-secret` 주입 단계 제거
- 워크플로우 트리거 경로(paths) 현행화
  - `platform/common`, `redislock`, `purchase` 등 변경된 프로젝트 구조 반영
- `auth` 모듈 Gradle 설정 수정
  - `bootJar` 활성화 및 일반 `jar` 비활성화 처리

--- a/.github/workflows/auth-ci.yml
+++ b/.github/workflows/auth-ci.yml
@@ -4,11 +4,17 @@ on:
   pull_request:
     paths:
       - "auth/**"
+      - "security-aop/**"
+      - "platform/common/**"
+      - "platform/message/**"
   push:
     branches:
       - main
     paths:
       - "auth/**"
+      - "security-aop/**"
+      - "platform/common/**"
+      - "platform/message/**"
 
 jobs:
 #  test:
@@ -103,6 +109,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Set up JDK
+        uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+
+      - name: auth JAR 빌드
+        run: ./gradlew :auth:bootJar -x test --no-daemon
+
       - name: Docker Buildx 설치
         uses: docker/setup-buildx-action@v3
 
@@ -125,8 +140,8 @@ jobs:
       - name: auth 서버 모듈 빌드 앤 푸시
         uses: docker/build-push-action@v6
         with:
-          context: .
-          file: auth/Dockerfile
+          context: auth
+          file: auth/Dockerfile.runtime
           push: true
           tags: |
             ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-auth-deploy:${{ needs.makeTagAndReleaseServer.outputs.tag_name }}
