--- a/.github/workflows/app-ci.yml
+++ b/.github/workflows/app-ci.yml
@@ -4,25 +4,29 @@ on:
   pull_request:
     paths:
       - "app/**"
-      - "common/**"
-      - "user/**"
       - "event/**"
+      - "user/**"
       - "seat/**"
-      - "message/**"
-      - "category-id/**"
+      - "purchase/**"
+      - "notification/**"
+      - "redislock/**"
       - "security-aop/**"
+      - "platform/common/**"
+      - "platform/message/**"
   push:
     branches:
       - main
     paths:
       - "app/**"
-      - "common/**"
-      - "user/**"
       - "event/**"
+      - "user/**"
       - "seat/**"
-      - "message/**"
-      - "category-id/**"
+      - "purchase/**"
+      - "notification/**"
+      - "redislock/**"
       - "security-aop/**"
+      - "platform/common/**"
+      - "platform/message/**"
 jobs:
 #  test:
 #    services:
@@ -118,6 +122,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Set up JDK
+        uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+
+      - name: app JAR 빌드
+        run: ./gradlew :app:bootJar -x test --no-daemon
+
       - name: Docker Buildx 설치
         uses: docker/setup-buildx-action@v3
 
@@ -139,8 +152,8 @@ jobs:
       - name: app 서버 모듈 빌드 앤 푸시
         uses: docker/build-push-action@v6
         with:
-          context: .
-          file: app/Dockerfile
+          context: app
+          file: app/Dockerfile.runtime
           push: true
           tags: |
             ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-app-deploy:${{ needs.makeTagAndReleaseServer.outputs.tag_name }}
