--- a/.github/workflows/broker-ci.yml
+++ b/.github/workflows/broker-ci.yml
@@ -4,15 +4,17 @@ on:
   pull_request:
     paths:
       - "broker/**"
-      - "common/**"
+      - "redislock/**"
       - "security-aop/**"
+      - "platform/common/**"
   push:
     branches:
       - main
     paths:
       - "broker/**"
-      - "common/**"
+      - "redislock/**"
       - "security-aop/**"
+      - "platform/common/**"
 
 jobs:
 #  test:
@@ -107,6 +109,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Set up JDK
+        uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+
+      - name: broker JAR 빌드
+        run: ./gradlew :broker:bootJar -x test --no-daemon
+
       - name: Docker Buildx 설치
         uses: docker/setup-buildx-action@v3
 
@@ -129,8 +140,8 @@ jobs:
       - name: broker 서버 모듈 빌드 앤 푸시
         uses: docker/build-push-action@v6
         with:
-          context: .
-          file: broker/Dockerfile
+          context: broker
+          file: broker/Dockerfile.runtime
           push: true
           tags: |
             ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-broker-deploy:${{ needs.makeTagAndReleaseServer.outputs.tag_name }}
