--- a/.github/workflows/common-ci.yml
+++ b/.github/workflows/common-ci.yml
@@ -48,23 +48,6 @@ jobs:
         with:
           java-version: '21'
           distribution: 'temurin'
-      - name: main application-secret 추가
-        env:
-          ACTIONS_STEP_DEBUG: true
-          APPLICATION_SECRET: ${{ secrets.MAIN_APPLICATION_SECRET }}
-        run: echo "$APPLICATION_SECRET" > service/main-server/src/main/resources/application-secret.yml
-
-      - name: queue application-secret 추가
-        env:
-          ACTIONS_STEP_DEBUG: true
-          APPLICATION_SECRET: ${{ secrets.QUEUE_APPLICATION_SECRET }}
-        run: echo "$APPLICATION_SECRET" > service/queue-server/src/main/resources/application-secret.yml
-
-      - name: dispatch application-secret 추가
-        env:
-          ACTIONS_STEP_DEBUG: true
-          APPLICATION_SECRET: ${{ secrets.DISPATCH_APPLICATION_SECRET }}
-        run: echo "$APPLICATION_SECRET" > service/message-dispatcher/src/main/resources/application-secret.yml
 
       - name: Run Tests
         run: ./gradlew test
@@ -115,6 +98,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Set up JDK
+        uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+
+      - name: app JAR 빌드
+        run: ./gradlew :app:bootJar -x test --no-daemon
+
       - name: Docker Buildx Install
         uses: docker/setup-buildx-action@v3
 
@@ -124,11 +116,6 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: main application-secret 추가
-        env:
-          ACTIONS_STEP_DEBUG: true
-          APPLICATION_SECRET: ${{ secrets.MAIN_APPLICATION_SECRET }}
-        run: echo "$APPLICATION_SECRET" > service/main-server/src/main/resources/application-secret.yml
       - name: set lower case owner name
         id: export_owner
         run: |
@@ -141,8 +128,8 @@ jobs:
       - name: 메인 서버 모듈 빌드 앤 푸시
         uses: docker/build-push-action@v6
         with:
-          context: .
-          file: service/main-server/Dockerfile
+          context: app
+          file: app/Dockerfile.runtime
           push: true
           tags: |
             ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-main-deploy:${{ needs.makeTagAndReleaseServer.outputs.tag_name }}
@@ -163,6 +150,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Set up JDK
+        uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+
+      - name: broker JAR 빌드
+        run: ./gradlew :broker:bootJar -x test --no-daemon
+
       - name: Docker Buildx Install
         uses: docker/setup-buildx-action@v3
 
@@ -172,11 +168,6 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: main application-secret 추가
-        env:
-          ACTIONS_STEP_DEBUG: true
-          APPLICATION_SECRET: ${{ secrets.MAIN_APPLICATION_SECRET }}
-        run: echo "$APPLICATION_SECRET" > service/queue-server/src/main/resources/application-secret.yml
       - name: set lower case owner name
         id: export_owner
         run: |
@@ -189,8 +180,8 @@ jobs:
       - name: 큐 서버 모듈 빌드 앤 푸시
         uses: docker/build-push-action@v6
         with:
-          context: .
-          file: service/queue-server/Dockerfile
+          context: broker
+          file: broker/Dockerfile.runtime
           push: true
           tags: |
             ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-queue-deploy:${{ needs.makeTagAndReleaseServer.outputs.tag_name }}
@@ -212,6 +203,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Set up JDK
+        uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+
+      - name: dispatcher JAR 빌드
+        run: ./gradlew :dispatcher:bootJar -x test --no-daemon
+
       - name: Docker Buildx Install
         uses: docker/setup-buildx-action@v3
 
@@ -221,11 +221,6 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: main application-secret 추가
-        env:
-          ACTIONS_STEP_DEBUG: true
-          APPLICATION_SECRET: ${{ secrets.MAIN_APPLICATION_SECRET }}
-        run: echo "$APPLICATION_SECRET" > service/message-dispatcher/src/main/resources/application-secret.yml
       - name: set lower case owner name
         id: export_owner
         run: |
@@ -238,8 +233,8 @@ jobs:
       - name: 디스패치 서버 모듈 빌드 앤 푸시
         uses: docker/build-push-action@v6
         with:
-          context: .
-          file: service/message-dispatcher/Dockerfile
+          context: dispatcher
+          file: dispatcher/Dockerfile.runtime
           push: true
           tags: |
             ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-dispatcher-deploy:${{ needs.makeTagAndReleaseServer.outputs.tag_name }}
