--- a/.github/workflows/eureka-ci.yml
+++ b/.github/workflows/eureka-ci.yml
@@ -3,12 +3,12 @@ name: eureka 테스트 및 빌드
 on:
   pull_request:
     paths:
-      - "eureka/**"
+      - "platform/eureka/**"
   push:
     branches:
       - main
     paths:
-      - "eureka/**"
+      - "platform/eureka/**"
 
 jobs:
 #  test:
@@ -103,6 +103,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Set up JDK
+        uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+
+      - name: eureka JAR 빌드
+        run: ./gradlew :platform:eureka:bootJar -x test --no-daemon
+
       - name: Docker Buildx 설치
         uses: docker/setup-buildx-action@v3
 
@@ -122,11 +131,11 @@ jobs:
       - name: export image name
         id: export_image
         run: echo "image_name=backend-queue-deploy" >> $GITHUB_OUTPUT
-      - name: broker 서버 모듈 빌드 앤 푸시
+      - name: eureka 서버 모듈 빌드 앤 푸시
         uses: docker/build-push-action@v6
         with:
-          context: .
-          file: eureka/Dockerfile
+          context: platform/eureka
+          file: platform/eureka/Dockerfile.runtime
           push: true
           tags: |
             ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-eureka-deploy:${{ needs.makeTagAndReleaseServer.outputs.tag_name }}
