--- a/.github/workflows/gateway-ci.yml
+++ b/.github/workflows/gateway-ci.yml
@@ -3,12 +3,14 @@ name: gateway 테스트 및 빌드
 on:
   pull_request:
     paths:
-      - "gateway/**"
+      - "platform/gateway/**"
+      - "platform/common/**"
   push:
     branches:
       - main
     paths:
-      - "gateway/**"
+      - "platform/gateway/**"
+      - "platform/common/**"
 
 jobs:
 #  test:
@@ -103,6 +105,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Set up JDK
+        uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+
+      - name: gateway JAR 빌드
+        run: ./gradlew :platform:gateway:bootJar -x test --no-daemon
+
       - name: Docker Buildx 설치
         uses: docker/setup-buildx-action@v3
 
@@ -125,8 +136,8 @@ jobs:
       - name: gateway 서버 모듈 빌드 앤 푸시
         uses: docker/build-push-action@v6
         with:
-          context: .
-          file: gateway/Dockerfile
+          context: platform/gateway
+          file: platform/gateway/Dockerfile.runtime
           push: true
           tags: |
             ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-gateway-deploy:${{ needs.makeTagAndReleaseServer.outputs.tag_name }}
