--- a/auth/Dockerfile.runtime
+++ b/auth/Dockerfile.runtime
@@ -5,4 +5,4 @@ WORKDIR /app
 
 COPY build/libs/*.jar app.jar
 
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-jar", "-Dspring.profiles.active=prod", "app.jar"]
