> Gemini 2.5 generated this response due to high traffic on Gemini 3
feat: 트리거 기반 통계 구체화 뷰 벤치마크 및 테스트 추가

- `MaterializedTriggerBenchmarkMain` 벤치마크 클래스 추가
  - `seat_layout_stats` 테이블을 트리거로 유지하는 방식과, 조회 시점에 서브쿼리로 집계하는 방식의 성능 비교
  - H2 및 MySQL 데이터베이스 지원
  - H2용 Java 트리거(`H2SeatLayoutStatsAfterInsertTrigger`) 구현
- `EventViewRepositoryLeftJoinTest` 테스트 추가
  - `seat_layout_stats`에 데이터가 없는 경우에도 `LEFT JOIN`이 정상 동작하여 이벤트 목록이 누락되지 않도록 보장
- 테스트 데이터 및 검증 로직 추가
  - 테스트용 시드 SQL 파일(`seed_event_seat_layout_seat_h2.sql`) 추가
  - 시드 데이터 무결성 검증을 위한 `SeedSqlDataCompatibilityTest` 추가
- 벤치마크 실행 가이드 및 빌드 구성 추가
  - `README_MATERIALIZED_TRIGGER_BENCH.md` 파일에 실행 방법 명시
  - `build.gradle`에 관련 의존성(`h2`, `mysql`, `querydsl`) 및 `application` 플러그인 설정 추가

--- a/nplus1-test/build.gradle
+++ b/nplus1-test/build.gradle
@@ -2,10 +2,21 @@ plugins {
     id 'application'
 }
 
+application {
+    // Benchmark runner (manual execution)
+    mainClass = 'org.codenbug.bench.MaterializedTriggerBenchmarkMain'
+}
+
 dependencies {
+    implementation 'com.h2database:h2'
+    runtimeOnly 'com.mysql:mysql-connector-j'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     testRuntimeOnly 'com.h2database:h2'
+
+    // Needed to instantiate EventViewRepositoryImpl (Querydsl)
+    testImplementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
 
     testImplementation project(':auth')
     testImplementation project(':event')
