--- a/broker/src/main/resources/application.yml
+++ b/broker/src/main/resources/application.yml
@@ -6,6 +6,13 @@ spring:
     redis:
       host: ${REDIS_HOST:localhost}
       port: ${REDIS_PORT:6379}
+      lettuce:
+        pool:
+          enabled: true
+          max-active: ${BROKER_REDIS_POOL_MAX_ACTIVE:256}
+          max-idle: ${BROKER_REDIS_POOL_MAX_IDLE:64}
+          min-idle: ${BROKER_REDIS_POOL_MIN_IDLE:16}
+          max-wait: ${BROKER_REDIS_POOL_MAX_WAIT:200ms}
   application:
     name: broker # Eureka에 등록될 서비스의 고유 이름
 
@@ -42,11 +49,13 @@ server:
   port: 0
   tomcat:
     threads:
-      max: 2000
-      min-spare: 100
-    max-connections: 10000
-    accept-count: 1000
-    connection-timeout: 60000
+      max: ${BROKER_TOMCAT_THREADS_MAX:600}
+      min-spare: ${BROKER_TOMCAT_THREADS_MIN_SPARE:100}
+    max-connections: ${BROKER_TOMCAT_MAX_CONNECTIONS:25000}
+    accept-count: ${BROKER_TOMCAT_ACCEPT_COUNT:5000}
+    connection-timeout: ${BROKER_TOMCAT_CONNECTION_TIMEOUT:5s}
+    keep-alive-timeout: ${BROKER_TOMCAT_KEEP_ALIVE_TIMEOUT:20s}
+    max-keep-alive-requests: ${BROKER_TOMCAT_MAX_KEEP_ALIVE_REQUESTS:1000}
 
 management:
   endpoints:
