--- a/dispatcher/src/main/resources/application.yml
+++ b/dispatcher/src/main/resources/application.yml
@@ -1,5 +1,12 @@
 server:
   port: 9002
+  tomcat:
+    threads:
+      max: ${DISPATCHER_TOMCAT_THREADS_MAX:150}
+      min-spare: ${DISPATCHER_TOMCAT_THREADS_MIN_SPARE:10}
+    max-connections: ${DISPATCHER_TOMCAT_MAX_CONNECTIONS:1000}
+    accept-count: ${DISPATCHER_TOMCAT_ACCEPT_COUNT:300}
+    connection-timeout: ${DISPATCHER_TOMCAT_CONNECTION_TIMEOUT:10s}
 
 spring:
   profiles:
@@ -9,6 +16,13 @@ spring:
     redis:
       host: ${REDIS_HOST:localhost}
       port: ${REDIS_PORT:6379}
+      lettuce:
+        pool:
+          enabled: true
+          max-active: ${DISPATCHER_REDIS_POOL_MAX_ACTIVE:96}
+          max-idle: ${DISPATCHER_REDIS_POOL_MAX_IDLE:24}
+          min-idle: ${DISPATCHER_REDIS_POOL_MIN_IDLE:8}
+          max-wait: ${DISPATCHER_REDIS_POOL_MAX_WAIT:200ms}
 management:
   endpoints:
     web:
