feat: gateway 인증 필터 리액티브 블랙리스트 검증과 HTTP 클라이언트 튜닝 적용

--- a/platform/gateway/build.gradle
+++ b/platform/gateway/build.gradle
@@ -9,12 +9,14 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-gateway-server-webflux'
     implementation 'org.projectlombok:lombok'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.apache.commons:commons-pool2'
     annotationProcessor 'org.projectlombok:lombok'
     
     // SpringDoc OpenAPI (Swagger) for WebFlux
     implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.2.0'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'io.projectreactor:reactor-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
     // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-netflix-eureka-client
